--- a/build.gradle
+++ b/build.gradle
@@ -1,73 +1,69 @@
-buildscript {
-    ext {
-        springBootVersion = '2.0.1.RELEASE'
-        springCloudConnectorsVersion = '2.0.1.RELEASE'
-    }
-
-    repositories {
-        jcenter()
-        mavenCentral()
-        maven { url "https://repo.spring.io/plugins-release" }
-    }
-
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
+plugins {
+	id "org.springframework.boot" version "2.1.3.RELEASE"
+	id "io.spring.dependency-management" version "1.0.6.RELEASE"
+	id 'java'
+	id 'eclipse-wtp'
+	id 'idea'
 }
-
-apply plugin: 'java'
-
-apply plugin: 'eclipse-wtp'
-apply plugin: 'idea'
-
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
 version = '1.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+ext {
+	springCloudVersion = 'Greenwich.RELEASE'
+}
+
 repositories {
-    mavenCentral()
-    mavenLocal()
+	mavenCentral()
+	jcenter()
+	maven {
+		url 'http://maven.repository.redhat.com/ga/'
+	}
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
+	}
 }
 
 dependencies {
-    // Spring Boot
-    compile "org.springframework.boot:spring-boot-starter-web"
-    compile "org.springframework.boot:spring-boot-starter-actuator"
-    compile "org.springframework.boot:spring-boot-starter-data-jpa"
-    compile "org.springframework.boot:spring-boot-starter-data-mongodb"
-    compile "org.springframework.boot:spring-boot-starter-data-redis"
+	// Spring Boot
+	compile "org.springframework.boot:spring-boot-starter-web"
+	compile "org.springframework.boot:spring-boot-starter-actuator"
+	compile "org.springframework.boot:spring-boot-starter-data-jpa"
+	compile "org.springframework.boot:spring-boot-starter-data-mongodb"
+	compile "org.springframework.boot:spring-boot-starter-data-redis"
 
-    // Spring Cloud Connectors
-    compile "org.springframework.cloud:spring-cloud-spring-service-connector:${springCloudConnectorsVersion}"
-    compile "org.springframework.cloud:spring-cloud-cloudfoundry-connector:${springCloudConnectorsVersion}"
+	// Spring Cloud Connectors
+	compile 'org.springframework.cloud:spring-cloud-starter-kubernetes'
 
-    // JPA Persistence
-    runtime "com.h2database:h2"
-    runtime "mysql:mysql-connector-java"
-    runtime "org.postgresql:postgresql"
-    runtime "com.microsoft.sqlserver:mssql-jdbc"
+	// JPA Persistence
+	runtime "com.h2database:h2"
+	runtime "mysql:mysql-connector-java"
+	runtime "org.postgresql:postgresql"
+	runtime "com.microsoft.sqlserver:mssql-jdbc"
 
-    // Webjars
-    compile "org.webjars:bootstrap:3.1.1"
-    compile "org.webjars:angularjs:1.2.16"
-    compile "org.webjars:angular-ui:0.4.0-2"
-    compile "org.webjars:angular-ui-bootstrap:0.10.0-1"
-    compile "org.webjars:jquery:2.1.0-2"
+	// Webjars
+	compile "org.webjars:bootstrap:3.1.1"
+	compile "org.webjars:angularjs:1.2.16"
+	compile "org.webjars:angular-ui:0.4.0-2"
+	compile "org.webjars:angular-ui-bootstrap:0.10.0-1"
+	compile "org.webjars:jquery:2.1.0-2"
 
-    // Oracle - uncomment one of the following after placing driver in ./libs
-    // compile files('libs/ojdbc8.jar')
-    // compile files('libs/ojdbc7.jar')
+	// Oracle - uncomment one of the following after placing driver in ./libs
+	// compile files('libs/ojdbc8.jar')
+	// compile files('libs/ojdbc7.jar')
 
-    // Testing
-    testCompile "junit:junit"
-    testCompile "org.springframework.boot:spring-boot-starter-test"
+	// Testing
+	testCompile "org.springframework.boot:spring-boot-starter-test"
+	testCompile 'org.junit.jupiter:junit-jupiter-api'
+	testRuntime 'org.junit.jupiter:junit-jupiter-engine'
+	testRuntime 'org.junit.vintage:junit-vintage-engine'
 }
 
-jar {
-    baseName = "spring-music"
-    version = "" // omit the version from the war file name
+tasks.withType(Test) {
+	useJUnitPlatform()
 }
