Initial support for k8s

--- a/src/main/fabric8/deployment.yml
+++ b/src/main/fabric8/deployment.yml
@@ -12,12 +12,12 @@ spec:
             - name: SPRING_DATASOURCE_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: spring-music-db
+                  name: music
                   key: database-user
             - name: SPRING_DATASOURCE_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: spring-music-db
+                  name: music
                   key: database-password
           livenessProbe:
             httpGet:
