--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,14 @@ logging:
   level:
     root: WARN
     io.k8s.samples.music: DEBUG
+---
+spring:
+  profiles: 'mongodb | redis'
 
+management:
+  health:
+    db:
+      enabled: false
 ---
 spring:
   profiles: '!redis'
@@ -43,6 +50,8 @@ management:
 ---
 spring:
   profiles: mysql
+  datasource:
+    url: 'jdbc:mysql://localhost:3306/music'
   jpa:
     properties:
       hibernate:
@@ -54,3 +63,19 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.ProgressDialect
+  datasource:
+    url: 'jdbc:postgresql://localhost:5432/music'
+---
+spring:
+  profiles: mongodb
+  data:
+    mongodb:
+      uri: 'mongodb://localhost:27017/music'
+---
+spring:
+  profiles: redis
+  redis:
+    host: localhost
+    port: 6379
+
+
