--- a/misc/templates/spring-music-mongodb-template.yml
+++ b/misc/templates/spring-music-mongodb-template.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Template
 metadata:
-  name: spring-music-mysql
+  name: spring-music-mongodb
   annotations:
     iconClass: icon-spring
-    description: Application template for deploying the spring-music application on OpenShift using a MySQL backend
+    description: Application template for deploying the spring-music application on OpenShift using a MongoDB backend
 parameters:
   - name: SPRING_PROFILES_ACTIVE
-    value: mysql
+    value: mongodb
     description: The profiles to activate in the spring context
     required: true
   - name: APPLICATION_NAME
@@ -20,16 +20,16 @@ parameters:
     required: true
   - name: DATABASE_USERNAME
     generate: expression
-    from: '[\w]{32}'
+    from: "[a-zA-Z]{32}"
     description: The database username
   - name: DATABASE_PASSWORD
     generate: expression
-    from: '[\w]{32}'
+    from: "[a-zA-Z0-9]{32}"
     description: The database password
-  - name: DATABASE_ROOT_PASSWORD
+  - name: DATABASE_ADMIN_PASSWORD
     generate: expression
-    from: '[\w]{32}'
-    description: The database root password
+    from: "[a-zA-Z0-9]{32}"
+    description: The database admin password
   - name: GITHUB_TRIGGER_SECRET
     generate: expression
     from: '[a-zA-Z0-9]{8}'
@@ -39,8 +39,8 @@ parameters:
     from: '[a-zA-Z0-9]{8}'
     description: Generic build trigger secret
 labels:
-  createdBy: spring-music-mysql-template
-  template: spring-music-mysql
+  createdBy: spring-music-mongodb-template
+  template: spring-music-mongodb
 objects:
   - kind: Secret
     apiVersion: v1
@@ -51,13 +51,13 @@ objects:
       annotations:
         template.openshift.io/expose-database_name: '{.data[''database-name'']}'
         template.openshift.io/expose-password: '{.data[''database-password'']}'
-        template.openshift.io/expose-root_password: '{.data[''database-root-password'']}'
         template.openshift.io/expose-username: '{.data[''database-user'']}'
+        template.openshift.io/expose-admin_password: '{.data["database-admin-password"]}'
     stringData:
       database-name: ${DATABASE_NAME}
       database-password: ${DATABASE_PASSWORD}
-      database-root-password: ${DATABASE_ROOT_PASSWORD}
       database-user: ${DATABASE_USERNAME}
+      database-admin-password: ${DATABASE_ADMIN_PASSWORD}
   - kind: ConfigMap
     apiVersion: v1
     metadata:
@@ -65,7 +65,7 @@ objects:
       labels:
         application: ${APPLICATION_NAME}
     data:
-      spring.datasource.url: 'jdbc:mysql://${APPLICATION_NAME}-db:3306/${DATABASE_NAME}'
+      spring.data.mongodb.uri: 'mongodb://${APPLICATION_NAME}-db:27017/${DATABASE_NAME}'
   - kind: ImageStream
     apiVersion: v1
     metadata:
@@ -127,7 +127,7 @@ objects:
     metadata:
       name: ${APPLICATION_NAME}-db
       labels:
-        template: mysql-ephemeral-template
+        template: mongodb-ephemeral-template
         application: ${APPLICATION_NAME}
       annotations:
         template.alpha.openshift.io/wait-for-ready: "true"
@@ -145,31 +145,31 @@ objects:
         spec:
           containers:
             - env:
-                - name: MYSQL_USER
+                - name: MONGODB_USER
                   valueFrom:
                     secretKeyRef:
                       name: ${APPLICATION_NAME}-db
                       key: database-user
-                - name: MYSQL_PASSWORD
+                - name: MONGODB_PASSWORD
                   valueFrom:
                     secretKeyRef:
                       name: ${APPLICATION_NAME}-db
                       key: database-password
-                - name: MYSQL_ROOT_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      name: ${APPLICATION_NAME}-db
-                      key: database-root-password
-                - name: MYSQL_DATABASE
+                - name: MONGODB_DATABASE
                   valueFrom:
                     secretKeyRef:
                       name: ${APPLICATION_NAME}-db
                       key: database-name
+                - name: MONGODB_ADMIN_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: ${APPLICATION_NAME}-db
+                      key: database-admin-password
               name: ${APPLICATION_NAME}-db
-              image: rhscl/mysql-57-rhel7
+              image: rhscl/mongodb-34-rhel7
               imagePullPolicy: IfNotPresent
               ports:
-                - containerPort: 3306
+                - containerPort: 27017
                   protocol: TCP
               livenessProbe:
                 failureThreshold: 3
@@ -177,7 +177,7 @@ objects:
                 periodSeconds: 10
                 successThreshold: 1
                 tcpSocket:
-                  port: 3306
+                  port: 27017
                 timeoutSeconds: 1
               readinessProbe:
                 exec:
@@ -185,7 +185,7 @@ objects:
                     - /bin/sh
                     - -i
                     - -c
-                    - MYSQL_PWD="$MYSQL_PASSWORD" mysql -h 127.0.0.1 -u $MYSQL_USER -D $MYSQL_DATABASE -e 'SELECT 1'
+                    - mongo 127.0.0.1:27017/$MONGODB_DATABASE -u $MONGODB_USER -p $MONGODB_PASSWORD --eval="quit()"
                 failureThreshold: 3
                 initialDelaySeconds: 5
                 periodSeconds: 10
@@ -197,7 +197,7 @@ objects:
               securityContext:
                 privileged: false
               volumnMounts:
-                - mountPath: /var/lib/mysql/data
+                - mountPath: /var/lib/mongodb/data
                   name: ${APPLICATION_NAME}-db-data
       triggers:
         - type: ImageChange
@@ -207,7 +207,7 @@ objects:
               - ${APPLICATION_NAME}-db
             from:
               kind: ImageStreamTag
-              name: mysql:5.7
+              name: mongodb:3.4
               namespace: openshift
         - type: ConfigChange
       volumes:
@@ -218,14 +218,14 @@ objects:
     metadata:
       name: ${APPLICATION_NAME}-db
       labels:
-        template: mysql-ephemeral-template
+        template: mongodb-ephemeral-template
         application: ${APPLICATION_NAME}
     spec:
       ports:
-        - name: mysql
-          port: 3306
+        - name: mongodb
+          port: 27017
           protocol: TCP
-          targetPort: 3306
+          targetPort: 27017
       selector:
         name: ${APPLICATION_NAME}-db
   - kind: DeploymentConfig
@@ -267,21 +267,21 @@ objects:
               env:
                 - name: SPRING_PROFILES_ACTIVE
                   value: ${SPRING_PROFILES_ACTIVE}
-                - name: SPRING_DATASOURCE_USERNAME
+                - name: SPRING_DATA_MONGODB_USERNAME
                   valueFrom:
                     secretKeyRef:
                       name: ${APPLICATION_NAME}-db
                       key: database-user
-                - name: SPRING_DATASOURCE_PASSWORD
+                - name: SPRING_DATA_MONGODB_PASSWORD
                   valueFrom:
                     secretKeyRef:
                       name: ${APPLICATION_NAME}-db
                       key: database-password
-                - name: SPRING_DATASOURCE_URL
+                - name: SPRING_DATA_MONGODB_URI
                   valueFrom:
                     configMapKeyRef:
                       name: ${APPLICATION_NAME}-config
-                      key: spring.datasource.url
+                      key: spring.data.mongodb.uri
               resources:
                 requests:
                   memory: 512Mi
@@ -337,4 +337,3 @@ objects:
       to:
         kind: Service
         name: ${APPLICATION_NAME}
-
