--- a/misc/templates/spring-music-redis-template.yml
+++ b/misc/templates/spring-music-redis-template.yml
@@ -48,7 +48,7 @@ objects:
         application: ${APPLICATION_NAME}
     data:
       spring.redis.host: ${APPLICATION_NAME}-db
-      spring.redis.port: 6379
+      spring.redis.port: "6379"
   - kind: ImageStream
     apiVersion: v1
     metadata:
