Getting redis to work

--- a/misc/templates/spring-music-mysql-template.yml
+++ b/misc/templates/spring-music-mysql-template.yml
@@ -196,7 +196,7 @@ objects:
                   memory: 512Mi
               securityContext:
                 privileged: false
-              volumnMounts:
+              volumeMounts:
                 - mountPath: /var/lib/mysql/data
                   name: ${APPLICATION_NAME}-db-data
       triggers:
