--- a/misc/templates/spring-music-redis-template.yml
+++ b/misc/templates/spring-music-redis-template.yml
@@ -52,6 +52,22 @@ objects:
   - kind: ImageStream
     apiVersion: v1
     metadata:
+      name: redis-32-rhel7
+      labels:
+        application: ${APPLICATION_NAME}
+    spec:
+      lookupPolicy:
+        local: false
+      tags:
+        - from:
+            kind: DockerImage
+            name: registry.access.redhat.com/rhscl/redis-32-rhel7
+          name: latest
+          referencePolicy:
+            type: Source
+  - kind: ImageStream
+    apiVersion: v1
+    metadata:
       name: s2i-java
       labels:
         application: ${APPLICATION_NAME}
@@ -153,7 +169,7 @@ objects:
                     - /bin/sh
                     - -i
                     - -c
-                    - test "$(redis-cli -h 127.0.0.1 -a $REDIS_PASSWORD ping) == "PONG"
+                    - test "$(redis-cli -h 127.0.0.1 -a $REDIS_PASSWORD ping)" == "PONG"
                 failureThreshold: 3
                 initialDelaySeconds: 5
                 periodSeconds: 10
@@ -164,9 +180,9 @@ objects:
                   memory: 512Mi
               securityContext:
                 privileged: false
-              volumnMounts:
-                - mountPath: /var/lib/redis/data
-                  name: ${APPLICATION_NAME}-db-data
+#              volumeMounts:
+#                - mountPath: /var/lib/redis/data
+#                  name: ${APPLICATION_NAME}-db-data
       triggers:
         - type: ImageChange
           imageChangeParams:
@@ -175,8 +191,7 @@ objects:
               - ${APPLICATION_NAME}-db
             from:
               kind: ImageStreamTag
-              name: redis:3.2
-              namespace: openshift
+              name: redis-32-rhel7:latest
         - type: ConfigChange
       volumes:
         - name: ${APPLICATION_NAME}-db-data
