--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,17 @@ plugins {
 	id "org.springframework.boot" version "2.1.3.RELEASE"
 	id "io.spring.dependency-management" version "1.0.6.RELEASE"
 	id "com.gorylenko.gradle-git-properties" version "2.0.0"
+	id "com.palantir.docker" version "0.21.0"
 	id 'java'
 	id 'eclipse-wtp'
 	id 'idea'
 }
 
 version = '1.0'
+group = 'edeandrea'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 ext {
 	springCloudVersion = 'Greenwich.RELEASE'
@@ -70,4 +72,16 @@ dependencies {
 
 tasks.withType(Test) {
 	useJUnitPlatform()
+}
+
+task unpack(type: Copy) {
+	dependsOn bootJar
+	from zipTree(tasks.bootJar.outputs.files.singleFile)
+	into "$buildDir/dependency"
+}
+
+docker {
+	name "${project.group}/${project.name}"
+	copySpec.from(tasks.unpack.outputs).into("dependency")
+	buildArgs(['DEPENDENCY': "dependency"])
 }
