--- a/misc/templates/spring-music-redis-template.yml
+++ b/misc/templates/spring-music-redis-template.yml
@@ -77,8 +77,8 @@ objects:
             openshift.io/imported-from: fabric8/s2i-java
           from:
             kind: DockerImage
-            name: fabric8/s2i-java
-          name: 3.0.0-java11
+            name: fabric8/s2i-java:latest-java11
+          name: latest-java11
           referencePolicy:
             type: Source
   - kind: ImageStream
@@ -116,7 +116,7 @@ objects:
         sourceStrategy:
           from:
             kind: ImageStreamTag
-            name: s2i-java:3.0.0-java11
+            name: s2i-java:latest-java11
       output:
         to:
           kind: ImageStreamTag
