--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,7 @@
 			</plugin>
 
 			<plugin>
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
