--- a/pom.xml
+++ b/pom.xml
@@ -196,34 +196,34 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.22.1</version>
 			</plugin>
+
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+			</plugin>
+
+<!--			<plugin>-->
+<!--				<artifactId>maven-deploy-plugin</artifactId>-->
+<!--				<version>2.8.1</version>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<id>default-deploy</id>-->
+<!--						<phase>deploy</phase>-->
+<!--						<goals>-->
+<!--							<goal>deploy</goal>-->
+<!--						</goals>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
 		</plugins>
 	</build>
 
-	<!-- Add the profile here -->
-	<profiles>
-		<profile>
-			<id>openshift</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>io.fabric8</groupId>
-						<artifactId>fabric8-maven-plugin</artifactId>
-						<version>${fabric8-maven-plugin.version}</version>
-						<executions>
-							<execution>
-								<id>fmp</id>
-								<phase>package</phase>
-								<goals>
-									<goal>resource</goal>
-									<goal>build</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+	<distributionManagement>
+			<snapshotRepository>
+				<id>libs-snapshot</id>
+				<url>http://nexus.labs-infra.svc/nexus/content/repositories/libs-snapshot</url>
+			</snapshotRepository>
+	</distributionManagement>
 
 	<repositories>
 		<repository>
