--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,26 @@
 				<version>2.8.2</version>
 			</plugin>
 
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.4</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 <!--			<plugin>-->
 <!--				<artifactId>maven-deploy-plugin</artifactId>-->
 <!--				<version>2.8.1</version>-->
