--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-tomcat</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-undertow</artifactId>
 		</dependency>
 
 		<dependency>
@@ -221,20 +232,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
-<!--			<plugin>-->
-<!--				<artifactId>maven-deploy-plugin</artifactId>-->
-<!--				<version>2.8.1</version>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<id>default-deploy</id>-->
-<!--						<phase>deploy</phase>-->
-<!--						<goals>-->
-<!--							<goal>deploy</goal>-->
-<!--						</goals>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
 		</plugins>
 	</build>
 
