Fix typo in template

--- a/misc/templates/dev-template.yml
+++ b/misc/templates/dev-template.yml
@@ -79,7 +79,7 @@ objects:
     metadata:
       name: spring-music
       labels:
-        app: spring-mucis
+        app: spring-music
     spec:
       tags:
         - name: latest
