--- a/misc/templates/dev-template.yml
+++ b/misc/templates/dev-template.yml
@@ -36,7 +36,7 @@ objects:
             deploymentconfig: spring-music
         spec:
           containers:
-            - image: spring-music
+            - image: ''
               imagePullPolicy: Always
               livenessProbe:
                 failureThreshold: 3
@@ -67,6 +67,7 @@ objects:
                 successThreshold: 1
                 timeoutSeconds: 10
     triggers:
+      - type: ConfigChange
       - type: ImageChange
         imageChangeParams:
           containerNames:
