Try to fix promote to prod

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<spring-boot.version>2.1.7.RELEASE</spring-boot.version>
+		<spring-boot.version>2.1.9.RELEASE</spring-boot.version>
 		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
 		<swagger.version>1.5.22</swagger.version>
 		<springfox.version>2.9.2</springfox.version>
@@ -101,6 +101,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
